--- a/pract1_5.tex
+++ b/pract1_5.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}  % добавили русский
-\usepackage{tikz}                    % черчение графиков
+\usepackage{tikz}                    % черчение графиковpract1_5.pdf
 \usepackage{siunitx}                 % в электрических схемах номиналы элементов
 \usepackage[american,cuteinductors,smartlabels]{circuitikz} % черчение электрических схем
 \usepackage{hyperref}
@@ -229,13 +229,13 @@
 
 
 На рис.\ref{answer} коммутация для $\gamma=25^\circ$ и на рис.\ref{answer1} коммутация для $\gamma=28.5^\circ$.
- \textcolor{red}{ при дальнейшем увеличении $\gamma$ займет весь интервал $\frac{360^\circ}{m}$. }, т.е. практически весь интервал ток проходит через два вентиля.
- при дальнейшем увеличении $\gamma$ коммутация затронет 3 фазы. И сам процесс будет выглядеть так: коммутация вентилей 2 фаз $\Rightarrow$ коммутация вентилей 3 фаз $\Rightarrow$ 2 фазы $\Rightarrow$ 3 фазы.
+ При дальнейшем увеличении $\gamma$ займет весь интервал ${\displaystyle \frac{360^\circ}{m}}$, т.е. практически весь интервал ток проходит через два вентиля.
+ При дальнейшем увеличении $\gamma$ коммутация затронет 3 фазы. И сам процесс будет выглядеть так: коммутация вентилей 2 фаз $\Rightarrow$ коммутация вентилей 3 фаз $\Rightarrow$ 2 фазы $\Rightarrow$ 3 фазы.
 
  С дальнейшим увеличением угла $\gamma$ коммутация затронет 4 фазы: 3 фазы $\Rightarrow$ 4 фазы $\Rightarrow$ 3 фазы $\Rightarrow$ 4 фазы.
 
- Для $m=12$ для угла $\gamma$ каждые $30^\circ$ происходит вовлечение в коммутацию следующего вентиля. Для неуправляемых вентилей $\alpha=0$. Возможно ли включение $m-1$ вентиля. Ответ -- нет,
- \href{http://e-heritage.ru/ras/view/publication/general.html?id=48315927}{может гореть около половины вентилей}. 
+ Для $m=12$ для угла $\gamma$ каждые $30^\circ$ происходит вовлечение в коммутацию следующего вентиля. Для неуправляемых вентилей $\alpha=0$. Возможно ли включение $m-1$ вентиля? Ответ -- нет,
+ \href{http://e-heritage.ru/ras/view/publication/general.html?id=48315927}{может гореть около половины вентилей} \cite{KNB}. 
  
 
 
@@ -344,8 +344,8 @@
 
 \renewcommand{\bibname}{}
 \begin{thebibliography}{3} 
-	\bibitem{lm211} \href{http://books.e-heritage.ru/book/10078915}{Электромагнитные процессы в системах с мощными выпрямительными установками
-Костенко М. П., Нейман Л. Р., Блавдзевич Г. Н. М.;Л.Изд-во АН СССР. 1946. 110 c.}
+	\bibitem{KNB} \href{http://books.e-heritage.ru/book/10078915}{Электромагнитные процессы в системах с мощными выпрямительными установками.
+Костенко М.П., Нейман Л.Р., Блавдзевич Г.Н. М.;Л. Изд-во АН СССР. 1946. 110 c.}
 \end{thebibliography}
 
 
