правильное слово Нулевая

--- a/pract2.tex
+++ b/pract2.tex
@@ -47,12 +47,12 @@
 \begin{tabular}{cccc}
 \begin{minipage}{0.22\textwidth}
 	\includegraphics[scale=0.3]{schema1}
-	\caption{\small Лучевая схема: треугольник -- звезда}
+	\caption{\small Нулевая схема: треугольник -- звезда}
 \end{minipage}
 	&
 \begin{minipage}{0.22\textwidth}
         \includegraphics[scale=0.3]{schema2}
-	\caption{\small Лучевая схема: звезда -- звезда}
+	\caption{\small Нулевая схема: звезда -- звезда}
 \end{minipage}
         &
 \begin{minipage}{0.25\textwidth}
@@ -97,12 +97,12 @@
         &
 \begin{minipage}{0.25\textwidth}
         \includegraphics[scale=0.3]{schema11}
-	\caption{\small Лучевая схема: треугольник -- двойной зигзаг}
+	\caption{\small Нулевая схема: треугольник -- двойной зигзаг}
 \end{minipage}
         &
 \begin{minipage}{0.22\textwidth}
         \includegraphics[scale=0.3]{schema12}
-	\caption{\small Лучевая схема: звезда -- двойной зигзаг}
+	\caption{\small Нулевая схема: звезда -- двойной зигзаг}
 \end{minipage}
        \\
 \end{tabular}
