убраны диода не по ГОСТу

--- a/pract2.tex
+++ b/pract2.tex
@@ -158,14 +158,13 @@
 
 \begin{verbatim}
 \begin{circuitikz}
-\draw (0,0) to[D] (3,0) node[right] {диод}; 
 \draw (0,-1) to[D-] (3,-1) node[right] {диод по ГОСТу};
 \draw (0,-2) to[D*] (3,-2) node[right] {закрашенный диод};
 \end{circuitikz}
 \end{verbatim}
 
 \begin{circuitikz}
-\draw (0,0) to[D] (3,0) node[right] {диод}; 
+%\draw (0,0) to[D] (3,0) node[right] {диод}; это не нужно использовать
 \draw (0,-1) to[D-] (3,-1) node[right] {диод по ГОСТу};
 \draw (0,-2) to[D*] (3,-2) node[right] {закрашенный диод};
 \end{circuitikz}
