--- a/pract2.tex
+++ b/pract2.tex
@@ -61,7 +61,8 @@
 \end{minipage}
         &
 \begin{minipage}{0.22\textwidth}
-        \includegraphics[scale=0.3]{schema4}
+%        \includegraphics[scale=0.3]{schema4}
+	\input{schema4}
 	\caption{\small Мостовая схема (Ларионова): звезда -- звезда}
 \end{minipage}
        \\
